Finished up, independent of OS
Added line to check the OS and execute the respective terminal or console program.